--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "postcss src/styles.css -o dist/styles.css",
     "watch": "postcss src/styles.css -o dist/styles.css --watch",
-    "dev": "live-server --port=8080 --entry-file=index.html"
+    "dev": "live-server --port=8080 --entry-file=index.html",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.0",
@@ -15,7 +18,9 @@
     "postcss-import": "^15.1.0",
     "autoprefixer": "^10.4.16",
     "@tailwindcss/typography": "^0.5.10",
-    "@tailwindcss/forms": "^0.5.7"
+    "@tailwindcss/forms": "^0.5.7",
+    "jest": "^29.7.0",
+    "@jest/globals": "^29.7.0"
   },
   "dependencies": {
     "live-server": "^1.2.2"
