Update package.json engines field to specify Node.js 18 compatibility by adding engines field with "node": ">=18.0.0" and "npm": ">=8.0.0"

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   },
   "dependencies": {
     "live-server": "^1.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
