Configure package.json exports field for modern module resolution

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Tailwind CSS 3.x benchmark app for migration testing",
   "type": "module",
   "main": "index.js",
+  "exports": {
+    ".": "./index.js",
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "build": "postcss src/styles.css -o dist/styles.css",
     "watch": "postcss src/styles.css -o dist/styles.css --watch",
