--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "dev": "live-server --port=8080 --entry-file=index.html"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^4.0.0",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
-    "postcss-import": "^15.1.0",
-    "autoprefixer": "^10.4.16",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tailwindcss/forms": "^0.5.7"
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/typography": "^4.0.0",
+    "@tailwindcss/forms": "^4.0.0"
   },
   "dependencies": {
     "live-server": "^1.2.2"
